--- a/app/views/index.html
+++ b/app/views/index.html
@@ -2,8 +2,7 @@
 <html>
     <head>
         <title>David Padbury</title>
-        <link rel=stylesheet type="text/css" href="main.css" />
-        <link rel="stylesheet" href="css/fonticons.css">
+        <link rel=stylesheet href="css/main.css" />
         <style>
             body {
                 background-image: url('wallpapers/{{wallpaper}}');
