--- a/app/views/index.html
+++ b/app/views/index.html
@@ -4,12 +4,12 @@
         <title>David Padbury</title>
         <link rel=stylesheet href="css/main.css" />
         <style>
-            body {
+            html {
                 background-image: url('wallpapers/{{wallpaper}}');
             }
         </style>
     </head>
-    <body class="no-js">
+    <body>
         <main>
             <div class=main-content>
                 <p><a href="http://davidpadbury.com">David Padbury</a></p>
@@ -20,7 +20,6 @@
                 </p>
             </div>
         </main>
-        <script src="main.js"></script>
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
