--- a/app/css/main.css
+++ b/app/css/main.css
@@ -3,12 +3,19 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
+    background-color: #000;
 }
 
-html {
+#cover {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     background-color: #000;
     background-size: cover;
     background-position: center;
+    transition: opacity 1s ease-in-out;
 }
 
 body {
