specify fallback fonts

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -20,7 +20,7 @@ html, body {
 
 body {
     color: #fff;
-    font-family: Calluna-Regular;
+    font-family: Calluna-Regular,Palatino,'Palatino Linotype',Georgia,Times,'Times New Roman',serif;
 }
 
 main {
