--- a/app/css/main.css
+++ b/app/css/main.css
@@ -15,7 +15,19 @@ html, body {
     background-color: #000;
     background-size: cover;
     background-position: center;
-    transition: opacity 0.3s ease-in-out;
+    transition: opacity 1s ease-in-out;
+}
+
+#progress {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 5px;
+    background-color: white;
+    transition: transform 0.2s;
+    transform-origin: 0 0;
+    transform: scaleX(0);
 }
 
 body {
