removing progress bar when loaded

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -20,14 +20,19 @@ html, body {
 
 #progress {
     position: absolute;
-    bottom: 0;
+    top: 0;
     left: 0;
     right: 0;
-    height: 5px;
+    height: 3px;
     background-color: white;
     transition: transform 0.2s;
     transform-origin: 0 0;
     transform: scaleX(0);
+}
+
+#progress.done {
+    transition: transform 0.5s;
+    transform: scaleX(1) translateY(-10px);
 }
 
 body {
