--- a/app/views/index.html
+++ b/app/views/index.html
@@ -8,6 +8,37 @@
         <div id=cover style="background-image: url('wallpapers/{{wallpaper}}?{{lookup hashes (concat 'wallpapers/' wallpaper)}}');"></div>
         <script>
             (function() {
+                function once(fn) {
+                    var called = false;
+
+                    return function() {
+                        if (!called) {
+                            called = true;
+                            var args = Array.prototype.slice.call(arguments);
+                            fn.apply(this, args);
+                        }
+                    };
+                }
+
+                var onTransitionEnd = (function() {
+                    var el = document.createElement('div');
+                    var eventName;
+
+                    if (typeof el.style.transition !== undefined) {
+                        eventName = 'transitionend';
+                    } else if (typeof el.style.webkitTransition !== undefined) {
+                        eventName = 'webkitTransitionEnd';
+                    }
+
+                    return function(el, fn) {
+                        if (eventName) {
+                            el.addEventListener(eventName, fn);
+                        } else {
+                            fn.apply(el);
+                        }
+                    };
+                })();
+
                 var cover = document.getElementById('cover');
                 var coverStyle = cover.style;
                 var backgroundImage = coverStyle.backgroundImage;
@@ -23,18 +54,33 @@
 
                 var xhr = new XMLHttpRequest();
 
-                xhr.onprogress = function(e) {
-                    if (!e.lengthComputable) return;
+                xhr.onprogress = (function() { 
+                    var lastProgress = -1;
+                    return function(e) {
+                        if (!e.lengthComputable) return;
 
-                    var loaded = e.loaded;
-                    var total = e.total;
-                    var progress = loaded/total;
+                        var loaded = e.loaded;
+                        var total = e.total;
+                        var progress = loaded/total;
 
-                    progressBar.style.transform = 'scaleX(' + progress + ')';
-                };
+                        if (progress > lastProgress) {
+                            //progressBar.style.transform = 'scaleX(' + progress + ')';
+                            progressBar.style.width = (progress * 100) + '%';
+                            lastProgress = progress;
+                        }
+                    };
+                })();
+
                 xhr.onload = function() {
-                    progressBar.className = 'done';
-                    progressBar.style.transform = '';
+                    onTransitionEnd(progressBar, once(function(e) {
+                        progressBar.className = 'done';
+                        progressBar.style.transform = '';
+
+                        onTransitionEnd(progressBar, once(function() {
+                            progressBar.remove();
+                        }));
+                    }));
+
                     coverStyle.backgroundImage = backgroundImage;
                     coverStyle.opacity = 1;
                     xhr = null;
