--- a/app/css/main.css
+++ b/app/css/main.css
@@ -24,11 +24,17 @@ html, body {
     left: 0;
     height: 3px;
     background-color: white;
-    transition: width 0.2s, transform 2s;
+    transition: width 0.2s, transform 0.5s;
+    transform: translateY(-3px);
+}
+
+#progress.active {
+    transform: translateY(0);
 }
 
 #progress.done {
-    transform: translateY(-3px);
+    width: 100%;
+    transition: width 0.2s, transform 3s;
 }
 
 body {
