Link to the https url of my site

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,7 +27,7 @@
         <script nonce={{nonces.script}}>{{{inline.script}}}</script>
         <main>
             <div class=main-content>
-                <p><a href="http://davidpadbury.com">David Padbury</a></p>
+                <p><a href="https://davidpadbury.com">David Padbury</a></p>
                 <p class=buttons>
                     <a href="https://twitter.com/davidpadbury"><i class="icon-twitter"></i></a>
                     <a href="https://www.linkedin.com/pub/david-padbury/4/437/656"><i class="icon-linkedin"></i></a>
