fixed link in name

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -15,9 +15,20 @@
         </style>
         <div id=cover data-background="wallpapers/{{wallpaper}}?{{lookup hashes (concat 'wallpapers/' wallpaper)}}"></div>
         <script nonce={{nonces.script}}>{{{inline.script}}}</script>
+
+
         <main>
             <div class=main-content>
-                <p><a href="https://pittfagan.com">Pitt Fagan</a></p>
+
+<!--              <header id="rt-top-surround">
+              				<div id="rt-top" >
+              			<div class="rt-container">
+              				<div class="rt-grid-12 rt-alpha rt-omega">
+                  	<div class="rt-block menu-block">
+              		<div id="name"><a href="http://www.pittfagan.com" title="Pitt Fagan"><span class="firstHighlight">Pitt</span> Fagan</a></div>
+              </header>
+-->
+                <p><a href="http://www.pittfagan.com">Pitt Fagan</a></p>
                 <p class=buttons>
                     <a href="https://www.twitter.com/pittfagan"><i class="icon-twitter"></i></a>
                     <a href="https://www.linkedin.com/in/pittfagan"><i class="icon-linkedin"></i></a>
